Second part of major refactoring; source finding with peaks completed

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -1,3 +1,21 @@
+# Debug flags
+debug:
+{
+  track_record: False
+  zero_peaks_before: False
+  zero_peaks_after: False
+  zero_peaks: False
+  one_peak: False
+  more_peaks: False
+  off_center: False
+}
+
+# Remove stars from the frame
+remove: True
+
+# Add region
+add_region: False
+
 # Initial radius (in pixels)
 initial_radius: 10.0
 
@@ -34,8 +52,8 @@ fit_factor: 1.0
 # Sigma clip background?
 sigma_clip_background: True
 
-# Aid detection by removing gradient
-aid_detection_by_removing_gradient: True
+# Always subtract background
+always_subtract_background: False
 
 # Central mask radius for gradient (in pixels)
 central_mask_radius_for_gradient: 5.0
