Third part of refactoring; fitting stars working

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -1,14 +1,8 @@
-# Debug flags
-debug:
-{
-  track_record: False
-  zero_peaks_before: False
-  zero_peaks_after: False
-  zero_peaks: False
-  one_peak: False
-  more_peaks: False
-  off_center: False
-}
+# Log level
+log_level: 'DEBUG'
+
+# Track record
+track_record: False
 
 # Remove stars from the frame
 remove: True
@@ -16,53 +10,90 @@ remove: True
 # Add region
 add_region: False
 
-# Initial radius (in pixels)
-initial_radius: 10.0
+# Fetching
+fetching:
+{
+  # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL" or combinations
+  catalogs: "UCAC4" # currently, no other catalogs are supported! 
+}
 
-# Extraction method
-extraction_method: "peaks"
+# Source detection
+detection:
+{
+  # Initial radius (in pixels)
+  initial_radius: 10.0
 
-# Minimum pixels
-minimum_pixels: 5
+  background_est_method: "polynomial"
+  sigma_clip_background: True
+ 
+  # Detection method
+  detection_method: "peaks"
+  
+  # Central mask radius for gradient (in pixels)
+  #central_mask_radius_for_gradient: 5.0   # not used anymore
+  
+  # Minimum pixels
+  minimum_pixels: 5
 
-# Threshold sigmas
-threshold_sigmas: 7.0
+  # Threshold sigmas
+  threshold_sigmas: 7.0
 
-# Peak offset tolerance (in pixels)
-peak_offset_tolerance: 3.0
+  # Peak offset tolerance (in pixels)
+  peak_offset_tolerance: 3.0
 
-# Minimum level
-min_level: -2
+  # Minimum level
+  min_level: -2
 
-# Maximum level
-max_level: 2
+  # Maximum level
+  max_level: 2
 
-# Scale factor
-scale_factor: 2.0
+  # Scale factor
+  scale_factor: 2.0
 
-# Background inner factor
-background_inner_factor: 1.0
+  # Background inner factor
+  background_inner_factor: 1.0
 
-# Background outer factor
-background_outer_factor: 1.5
+  # Background outer factor
+  background_outer_factor: 1.5
 
-# Fit factor
-fit_factor: 1.0
+  # Always subtract background
+  always_subtract_background: False
+  
+  # Debug
+  debug:
+  {
+    zero_peaks_before: False
+    zero_peaks_after: False
+    zero_peaks: False
+    one_peak: False
+    more_peaks: False
+    off_center: False
+  }
+}
 
-# Sigma clip background?
-sigma_clip_background: True
+# Fitting
+fitting:
+{
+  use_center_or_peak: "peak"
+  model_names: ["Gaussian", "Airy"]
+  initial_sigma: None
+  minimum_pixels: 5
+  max_model_offset: 3.0
+  zoom_factor: 2.0
+  background_est_method: "polynomial"
+  sigma_clip_background: True
 
-# Always subtract background
-always_subtract_background: False
+  # Fit factor
+  #fit_factor: 1.0 # not used anymore
 
-# Central mask radius for gradient (in pixels)
-central_mask_radius_for_gradient: 5.0
+  # Upsample factor
+  upsample_factor: 1.0
 
-# Upsample factor
-upsample_factor: 1.0
-
-# Use center or peak
-use_center_or_peak: "peak"
-
-# Model name
-model_name: "Gaussian"
+  # Debug
+  debug:
+  {
+    model_offset: False
+    success: False
+  }
+  
+}
