Fourth part of refactoring: removed old functions, improved Mask class, trying to fix saturation removal

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -1,9 +1,3 @@
-# Debug mode
-debug:
-{
-  expand: False
-  success: False
-}
 
 # Remove galaxies from the frame
 remove: True
@@ -11,35 +5,55 @@ remove: True
 # Add a region to the image
 add_region: True
 
-# Method for ...
-extraction_method: "segmentation"
+# Detection
+detection:
+{
 
-# Method for ...
-subtraction_method: "interpolation"
+  # Method for ...
+  detection_method: "segmentation"
 
-# Subtract if undetected
-subtract_if_undetected: False
+  # Expand
+  expand: True
 
-# Initial radius
-initial_radius: 10.0
+  # Background outer factor
+  background_outer_factor: 1.3
 
-# Background outer factor
-background_outer_factor: 1.3
+  # Kernel fwhm
+  kernel_fwhm: 3.0
 
-# Kernel fwhm
-kernel_fwhm: 3.0
+  # Kernel size
+  kernel_size: 6.0
 
-# Kernel size
-kernel_size: 6.0
+  # Threshold sigmas
+  threshold_sigmas: 2.0
 
-# Threshold sigmas
-threshold_sigmas: 2.0
+  # Expansion factor
+  expansion_factor: 1.5
 
-# Expand
-expand: True
+  # Max expansion level
+  max_expansion_level: 3
 
-# Expansion factor
-expansion_factor: 1.5
+  # Debug
+  debug:
+  {
+    no_segment_before: False
+    no_segment_after: False
+    no_segment: False
+    expand: False
+    success: False
+  }
+}
 
-# Max expansion level
-max_expansion_level: 3
+# Removal
+removal:
+{
+  # Method for ...
+  subtraction_method: "interpolation"
+  
+  # Subtract if undetected
+  subtract_if_undetected: False
+
+  # Initial radius
+  initial_radius: 10.0
+
+}
