--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -7,6 +7,9 @@ track_record: False
 # Remove stars from the frame
 remove: True
 
+# Remove saturated stars
+remove_saturation: True
+
 # Add region
 add_region: False
 
@@ -95,5 +98,52 @@ fitting:
     model_offset: False
     success: False
   }
+}
+
+# Removal
+removal:
+{
+  #subtract_model: False   # This feature is still unsupported !
+  method: "interpolation"
+  sigma_clip: True
+  remove_sigmas: 4.0
+  outer_sigmas: 8.0
+  no_source_fwhm: "mean"  # other options: "max", "median"
+  remove_saturation: True
+}
+
+# Saturated stars
+saturation:
+{
+  method: "brightest" # other: "size", "all"
+  criterion: "flux"  # or "central_brightness"
+  brightest_method: "percentage"  # or: "sigma_clip"
+  limit: 0.08  # for "percentage": a percentage, for "sigma_clip": a sigma-level
   
+  # For segmentation:
+  background_inner_factor: 9.0
+  background_outer_factor: 12.0
+  always_subtract_background: False
+  background_est_method: "polynomial"
+  sigma_clip_background: True
+  threshold_sigmas: 2.0
+  expansion_factor: 1.5
+  kernel_fwhm: 3.0
+  kernel_size: 6
+  expand: True
+  max_expansion_level: 5
+  
+  # For removing the saturation
+  remove_method: "interpolation"
+  sigma_clip: True
+  
+  # Debug mode
+  debug:
+  {
+    no_segment_before: False
+    no_segment_after: False
+    no_segment: False
+    expand: True
+    success: True
+  }
 }
