--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -2,12 +2,12 @@
 # Remove galaxies from the frame
 remove: True
 
-# Add a region to the image
-add_region: True
-
 # Detection
 detection:
 {
+
+  # Initial radius (in pixels)
+  initial_radius: 10.0 
 
   # Method for ...
   detection_method: "segmentation"
@@ -15,8 +15,17 @@ detection:
   # Expand
   expand: True
 
+  always_subtract_background: False
+
+  # Background inner factor
+  #background_inner_factor: 1.0 # deprecated!
+
   # Background outer factor
   background_outer_factor: 1.3
+
+  background_est_method: "polynomial"
+  
+  sigma_clip_background: True
 
   # Kernel fwhm
   kernel_fwhm: 3.0
@@ -48,12 +57,19 @@ detection:
 removal:
 {
   # Method for ...
-  subtraction_method: "interpolation"
+  remove_method: "interpolation"
+  
+  sigma_clip: True
   
   # Subtract if undetected
   subtract_if_undetected: False
 
   # Initial radius
   initial_radius: 10.0
+}
 
+# Region
+region:
+{
+  default_radius: 10.0
 }
