--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -10,14 +10,13 @@ remove: True
 # Remove saturated stars
 remove_saturation: True
 
-# Add region
-add_region: False
-
 # Fetching
 fetching:
 {
   # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL" or combinations
   catalogs: "UCAC4" # currently, no other catalogs are supported! 
+  
+  min_difference_from_galaxy: 7.0   # in pixels
 }
 
 # Source detection
@@ -54,7 +53,7 @@ detection:
   scale_factor: 2.0
 
   # Background inner factor
-  background_inner_factor: 1.0
+  #background_inner_factor: 1.0 # deprecated
 
   # Background outer factor
   background_outer_factor: 1.5
@@ -120,9 +119,12 @@ saturation:
   brightest_method: "percentage"  # or: "sigma_clip"
   limit: 0.08  # for "percentage": a percentage, for "sigma_clip": a sigma-level
   
+  no_source_fwhm: "mean"
+  
   # For segmentation:
-  background_inner_factor: 9.0
-  background_outer_factor: 12.0
+  sigmas: 20.0
+  #background_inner_factor: 1.0 # deprecated
+  background_outer_factor: 1.2
   always_subtract_background: False
   background_est_method: "polynomial"
   sigma_clip_background: True
@@ -143,7 +145,7 @@ saturation:
     no_segment_before: False
     no_segment_after: False
     no_segment: False
-    expand: True
-    success: True
+    expand: False
+    success: False
   }
 }
