--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -6,9 +6,12 @@ remove: True
 detection:
 {
 
-  # Initial radius (in pixels)
-  initial_radius: 10.0 
+  # Convolution
+  #convolution: True
 
+  # Initial radius (in pixels)
+  initial_radius: 20.0 
+  
   # Method for ...
   detection_method: "segmentation"
 
@@ -27,11 +30,15 @@ detection:
   
   sigma_clip_background: True
 
-  # Kernel fwhm
-  kernel_fwhm: 3.0
+  # Minimum connected pixels (int)
+  min_pixels: 5
 
-  # Kernel size
-  kernel_size: 6.0
+  # Kernel
+  kernel:
+  {
+    fwhm: 10.0
+    cutoff_level: 4.0 # in sigmas
+  }
 
   # Threshold sigmas
   threshold_sigmas: 2.0
@@ -40,16 +47,16 @@ detection:
   expansion_factor: 1.5
 
   # Max expansion level
-  max_expansion_level: 3
+  max_expansion_level: 4
 
   # Debug
   debug:
   {
-    no_segment_before: False
-    no_segment_after: False
-    no_segment: False
-    expand: False
-    success: False
+    no_segment_before: True
+    no_segment_after: True
+    no_segment: True
+    expand: True
+    success: True
   }
 }
 
@@ -72,4 +79,18 @@ removal:
 region:
 {
   default_radius: 10.0
+}
+
+# Mask
+mask:
+{
+  expand: True
+  iterations: 200
+  connectivity: 2
+}
+
+# Apertures
+apertures:
+{
+  sigma_level: 3.5 # approximate isophotal extent
 }
