--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -130,8 +130,14 @@ saturation:
   sigma_clip_background: True
   threshold_sigmas: 2.0
   expansion_factor: 1.5
-  kernel_fwhm: 3.0
-  kernel_size: 6
+  
+  # Kernel
+  kernel:
+  {
+    fwhm: 3.0
+    cutoff_level: 4.0 # in sigmas
+  }
+  
   expand: True
   max_expansion_level: 5
   
