Various bug fixes and improvements

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -2,6 +2,9 @@
 # Remove galaxies from the frame
 remove: True
 
+# Find apertures
+find_apertures: True
+
 # Detection
 detection:
 {
@@ -52,11 +55,11 @@ detection:
   # Debug
   debug:
   {
-    no_segment_before: True
-    no_segment_after: True
-    no_segment: True
-    expand: True
-    success: True
+    no_segment_before: False
+    no_segment_after: False
+    no_segment: False
+    expand: False
+    success: False
   }
 }
 
@@ -87,10 +90,13 @@ mask:
   expand: True
   iterations: 200
   connectivity: 2
+  
+  # Use aperture instead of segment mask
+  use_aperture: True
 }
 
 # Apertures
 apertures:
 {
-  sigma_level: 3.5 # approximate isophotal extent
+  sigma_level: 4.0 # approximate isophotal extent
 }
