--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -131,6 +131,9 @@ saturation:
   threshold_sigmas: 2.0
   expansion_factor: 1.5
   
+  # Minimum connected pixels (int)
+  min_pixels: 5
+  
   # Kernel
   kernel:
   {
