--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -60,7 +60,12 @@ detection:
     no_segment: False
     expand: False
     success: False
+    dilated: False
   }
+  
+  dilate: True
+  iterations: 200
+  connectivity: 2
 }
 
 # Removal
@@ -87,9 +92,9 @@ region:
 # Mask
 mask:
 {
-  expand: True
-  iterations: 200
-  connectivity: 2
+  #dilate: False
+  #iterations: 200
+  #connectivity: 2
   
   # Use aperture instead of segment mask
   use_aperture: True
