--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -102,8 +102,8 @@ removal:
   #subtract_model: False   # This feature is still unsupported !
   method: "interpolation"
   sigma_clip: True
-  remove_sigmas: 4.0
-  outer_sigmas: 8.0
+  sigma_level: 5.0
+  outer_factor: 1.6
   no_source_fwhm: "mean"  # other options: "max", "median"
   remove_saturation: True
 }
@@ -119,8 +119,7 @@ saturation:
   no_source_fwhm: "mean"
   
   # For segmentation:
-  sigmas: 20.0
-  #background_inner_factor: 1.0 # deprecated
+  sigmas: 15.0
   background_outer_factor: 1.2
   always_subtract_background: False
   background_est_method: "polynomial"
@@ -152,6 +151,11 @@ saturation:
     no_segment_after: False
     no_segment: False
     expand: False
-    success: False
+    success: True
+    dilated: True
   }
+  
+  dilate: True
+  iterations: 200
+  connectivity: 2
 }
