Among other things, plot() and create_region() functions for StarExtractor have been added

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -138,7 +138,7 @@ saturation:
   }
   
   expand: True
-  max_expansion_level: 5
+  max_expansion_level: 2
   
   # For removing the saturation
   remove_method: "interpolation"
@@ -158,4 +158,16 @@ saturation:
   dilate: True
   iterations: 5
   connectivity: 2
+}
+
+# Region
+region:
+{
+  sigma_level: 5.0
+}
+
+# Plotting
+plotting:
+{
+  show_colorbar: True
 }
