--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -44,7 +44,7 @@ detection:
   }
 
   # Threshold sigmas
-  threshold_sigmas: 2.0
+  sigma_level: 2.0
 
   # Expansion factor
   expansion_factor: 1.5
