--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -16,7 +16,7 @@ fetching:
   # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL" or combinations
   catalogs: "UCAC4" # currently, no other catalogs are supported! 
   
-  min_difference_from_galaxy: 7.0   # in pixels
+  min_difference_from_galaxy: 10.0   # in pixels
 }
 
 # Source detection
@@ -38,7 +38,7 @@ detection:
   minimum_pixels: 5
 
   # Threshold sigmas
-  threshold_sigmas: 7.0
+  sigma_level: 7.0
 
   # Peak offset tolerance (in pixels)
   peak_offset_tolerance: 3.0
@@ -124,7 +124,7 @@ saturation:
   always_subtract_background: False
   background_est_method: "polynomial"
   sigma_clip_background: True
-  threshold_sigmas: 2.0
+  sigma_level: 2.0
   expansion_factor: 1.5
   
   # Minimum connected pixels (int)
@@ -151,13 +151,16 @@ saturation:
     no_segment_after: False
     no_segment: False
     expand: False
-    success: True
-    dilated: True
+    success: False
+    dilated: False
   }
   
   dilate: True
   iterations: 5
   connectivity: 2
+  
+  remove_if_no_source: True
+  
 }
 
 # Region
