Star and Galaxy inherit from new SkyObject class, StarExtractor and GalaxyExtractors enherit from new ObjectExtractor class

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -1,3 +1,8 @@
+# Log level
+log_level: 'DEBUG'
+
+# Special region
+special_region: None
 
 # Remove galaxies from the frame
 remove: True
@@ -76,8 +81,8 @@ removal:
   
   sigma_clip: True
   
-  # Subtract if undetected
-  subtract_if_undetected: False
+  # Remove if undetected
+  remove_if_undetected: False
 
   # Initial radius
   initial_radius: 10.0
