--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -4,11 +4,17 @@ log_level: 'DEBUG'
 # Track record
 track_record: False
 
+# Special region
+special_region: None
+
 # Remove stars from the frame
 remove: True
 
 # Remove saturated stars
 remove_saturation: True
+
+# Find apertures (for saturation)
+find_apertures: False
 
 # Fetching
 fetching:
@@ -106,6 +112,9 @@ removal:
   outer_factor: 1.6
   no_source_fwhm: "mean"  # other options: "max", "median"
   remove_saturation: True
+  
+  # Remove if undetected
+  remove_if_undetected: True
 }
 
 # Saturated stars
@@ -159,7 +168,8 @@ saturation:
   iterations: 5
   connectivity: 2
   
-  remove_if_no_source: True
+  # Remove if undetected
+  remove_if_undetected: True
   
 }
 
@@ -169,8 +179,20 @@ region:
   sigma_level: 5.0
 }
 
+# Mask
+mask:
+{
+  use_aperture: False
+}
+
 # Plotting
 plotting:
 {
   show_colorbar: True
+}
+
+# Apertures
+apertures:
+{
+  sigma_level: 4.0 # approximate isophotal extent
 }
