Some improvements in star removal

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -100,6 +100,9 @@ fitting:
     model_offset: False
     success: False
   }
+  
+  # Fit if undetected (no source (peak) found)
+  fit_if_undetected: False
 }
 
 # Removal
@@ -108,6 +111,8 @@ removal:
   #subtract_model: False   # This feature is still unsupported !
   method: "interpolation"
   sigma_clip: True
+  no_sigma_clip_on_galaxy: True
+  
   sigma_level: 5.0
   outer_factor: 1.6
   no_source_fwhm: "mean"  # other options: "max", "median"
@@ -147,11 +152,12 @@ saturation:
   }
   
   expand: True
-  max_expansion_level: 2
+  max_expansion_level: 3
   
   # For removing the saturation
   remove_method: "interpolation"
   sigma_clip: True
+  no_sigma_clip_on_galaxy: True
   
   # Debug mode
   debug:
