Fix situations where a saturation mask gets attached to a mask covering e.g. the galaxy

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -66,11 +66,17 @@ detection:
     expand: False
     success: False
     dilated: False
+    
+    overlap_before: False
+    overlap_after: False
   }
   
   dilate: True
   iterations: 5
   connectivity: 2
+  
+  # Remove appendages from overlapping mask
+  remove_appendages: False
 }
 
 # Removal
