--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -168,6 +168,9 @@ saturation:
     expand: False
     success: False
     dilated: False
+    
+    overlap_before: False
+    overlap_after: False
   }
   
   dilate: True
@@ -177,6 +180,8 @@ saturation:
   # Remove if undetected
   remove_if_undetected: True
   
+  # Remove appendages from overlapping mask
+  remove_appendages: False
 }
 
 # Region
