Added the ability to ignore a certain region in the image for star subtraction

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -4,6 +4,9 @@ log_level: 'DEBUG'
 # Special region
 special_region: None
 
+# Ignore region
+ignore_region: None
+
 # Remove galaxies from the frame
 remove: True
 
