--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -7,6 +7,9 @@ track_record: False
 # Special region
 special_region: None
 
+# Ignore region
+ignore_region: None
+
 # Remove stars from the frame
 remove: True
 
