Allow expansion of segmentation mask after the final iteration with a factor defined by the user

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -172,6 +172,8 @@ saturation:
     success: False
     dilated: False
     
+    user_expansion: False
+    
     overlap_before: False
     overlap_after: False
   }
@@ -179,6 +181,10 @@ saturation:
   dilate: True
   iterations: 5
   connectivity: 2
+  
+  # User expansion
+  user_expansion: False
+  user_expansion_factor: None
   
   # Remove if undetected
   remove_if_undetected: True
