--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -70,6 +70,9 @@ detection:
     success: False
     dilated: False
     
+    # User expansion
+    user_expansion: False
+    
     overlap_before: False
     overlap_after: False
   }
@@ -77,6 +80,10 @@ detection:
   dilate: True
   iterations: 5
   connectivity: 2
+  
+  # User expansion
+  user_expansion: False
+  user_expansion_factor: None
   
   # Remove appendages from overlapping mask
   remove_appendages: False
