Allow exporting a mask of the apertures surrounding segmentation masks of saturatedstars/galaxies and expanding it by a certain factor

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -3,6 +3,7 @@ log_level: 'DEBUG'
 
 # Track record
 track_record: False
+plot_track_record_if_exception: True
 
 # Special region
 special_region: None
