--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -1,6 +1,10 @@
 # Log level
 log_level: 'DEBUG'
 
+# Track record
+track_record: False
+plot_track_record_if_exception: True
+
 # Special region
 special_region: None
 
