All-round improvements, added option to remove saturated stars based on the corresponding aperture

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -20,6 +20,9 @@ remove_saturation: True
 # Find apertures (for saturation)
 find_apertures: False
 
+remove_apertures: False
+remove_apertures_factor: 1.0
+
 # Fetching
 fetching:
 {
@@ -116,6 +119,7 @@ removal:
   method: "interpolation"
   sigma_clip: True
   no_sigma_clip_on_galaxy: True
+  polynomial_on_galaxy: False
   
   sigma_level: 5.0
   outer_factor: 1.6
@@ -162,6 +166,7 @@ saturation:
   remove_method: "interpolation"
   sigma_clip: True
   no_sigma_clip_on_galaxy: True
+  polynomial_on_galaxy: False
   
   # Debug mode
   debug:
