Refactoring galaxymodeler, added ImagePreparation class

--- a/config/galaxymodeler.cfg
+++ b/config/galaxymodeler.cfg
@@ -1,18 +1,17 @@
+# The logging level
+log_level: 'DEBUG'
+cascade_log_level: True
 
+# Define whether to save or plot intermediate results
 save: True
 plot: False
 
+# Define the names of the directories
 data_dir: "data"
 prep_dir: "prep"
 in_dir: "in"
+config_dir: "config"
+extra_dir: "extra"
 
-convolve: False
-convolve_to: "PACS160"
-
-rebin: True
-rebin_to: "PACS160"
-
-# Remove galaxies from the frame
-remove: True
-
-
+# The reference (for convolving, rebinning)
+reference_image: "PACS160.fits"
