Improvements in logging

--- a/config/galaxymodeler.cfg
+++ b/config/galaxymodeler.cfg
@@ -1,6 +1,15 @@
-# The logging level
-log_level: 'DEBUG'
-cascade_log_level: True
+# Logging
+logging:
+{
+  # Logging level
+  level: 'DEBUG'
+  
+  # Cascade the logging level down to the lower-level objects
+  cascade: True
+  
+  # Sets the path for an optional log file
+  path: None
+} 
 
 # Define whether to save or plot intermediate results
 save: True
@@ -15,3 +24,15 @@ extra_dir: "extra"
 
 # The reference (for convolving, rebinning)
 reference_image: "PACS160.fits"
+
+# Run the image preparation
+prepare: True
+
+# Run the decomposition routines
+decompose: True
+
+# Run the map making
+make_maps: True
+
+# Run the SED fitting
+fit_sed: True
