--- a/config/imagepreparation.cfg
+++ b/config/imagepreparation.cfg
@@ -1,5 +1,15 @@
-# The logging level
-log_level: 'INFO'
+# Logging
+logging:
+{
+  # Logging level
+  level: 'INFO'
+  
+  # Cascade the logging level down to the lower-level objects
+  cascade: True
+  
+  # Sets the path for an optional log file
+  path: None
+} 
 
 # The name of the frame
 primary: "primary"
