Improved API, fixed bugs, improved logging etc.

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -1,5 +1,15 @@
-# Log level
-log_level: 'DEBUG'
+# Logging
+logging:
+{
+  # Logging level
+  level: 'INFO'
+  
+  # Cascade the logging level down to the lower-level objects
+  cascade: True
+  
+  # Sets the path for an optional log file
+  path: None
+} 
 
 # Track record
 track_record: False
@@ -17,10 +27,18 @@ remove: True
 # Find apertures
 find_apertures: True
 
+# Save region
+save_region: False
+
+# Save masked frame
+save_masked_frame: False
+
+# Save result
+save_result: False
+
 # Detection
 detection:
 {
-
   # Convolution
   #convolution: True
 
@@ -125,4 +143,18 @@ mask:
 apertures:
 {
   sigma_level: 4.0 # approximate isophotal extent
+}
+
+# Saving
+saving:
+{
+  # Saving galaxy region
+  region_path: None
+  region_annotation: "flux"
+  
+  # Saving masked galaxies frame
+  masked_frame_path: None
+  
+  # Saving the resulting frame (with galaxies removed)
+  result_path: None
 }
