--- a/magic/config/skyextractor.cfg
+++ b/magic/config/skyextractor.cfg
@@ -1,5 +1,19 @@
+# Logging
+logging:
+{
+  # Logging level
+  level: 'INFO'
+  
+  # Cascade the logging level down to the lower-level objects
+  cascade: True
+  
+  # Sets the path for an optional log file
+  path: None
+} 
 
+# Sigma-clip the sky
 sigma_clip: True
 sigma_level: 3.0
 
-downsample_factor: 2*4  # times image.fwhm
+# Downsample factor
+downsample_factor: 2*4  # (times image.fwhm)
