--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -1,5 +1,15 @@
-# Log level
-log_level: 'DEBUG'
+# Logging
+logging:
+{
+  # Logging level
+  level: 'INFO'
+  
+  # Cascade the logging level down to the lower-level objects
+  cascade: True
+  
+  # Sets the path for an optional log file
+  path: None
+} 
 
 # Track record
 track_record: False
@@ -20,8 +30,18 @@ remove_saturation: True
 # Find apertures (for saturation)
 find_apertures: False
 
+# Remove apertures
 remove_apertures: False
 remove_apertures_factor: 1.0
+
+# Save region
+save_region: False
+
+# Save masked frame
+save_masked_frame: False
+
+# Save result
+save_result: False
 
 # Fetching
 fetching:
@@ -227,4 +247,18 @@ plotting:
 apertures:
 {
   sigma_level: 4.0 # approximate isophotal extent
+}
+
+# Saving
+saving:
+{
+  # Saving star region
+  region_path: None
+  region_annotation: "flux"
+  
+  # Saving masked stars frame
+  masked_frame_path: None
+  
+  # Saving the resulting frame (with stars removed)
+  result_path: None
 }
