--- a/config/galaxymodeler.cfg
+++ b/config/galaxymodeler.cfg
@@ -21,6 +21,7 @@ prep_dir: "prep"
 in_dir: "in"
 config_dir: "config"
 extra_dir: "extra"
+ignore_dir: "ignore"
 
 # The reference (for convolving, rebinning)
 reference_image: "PACS160.fits"
