Improvements for creating masks from GalaxyExtractor and StarExtractor

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -27,6 +27,14 @@ remove: True
 # Find apertures
 find_apertures: True
 
+# Aperture removal
+remove_apertures: False
+aperture_removal:
+{
+  # Expansion factor
+  expansion_factor: 1.0
+}
+
 # Save region
 save_region: False
 
@@ -135,8 +143,14 @@ region:
 # Mask
 mask:
 {
-  # Use aperture instead of segment mask
+  # Use the D25, R25 and orientation parameters if available
+  use_d25: True
+  
+  # Use aperture instead of segment (source) mask
   use_aperture: True
+  
+  # Include stars in the mask for which a source was not found
+  include_undetected: True
 }
 
 # Apertures
