--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -30,9 +30,13 @@ remove_saturation: True
 # Find apertures (for saturation)
 find_apertures: False
 
-# Remove apertures
+# Aperture removal
 remove_apertures: False
-remove_apertures_factor: 1.0
+aperture_removal:
+{
+  # Expansion factor
+  expansion_factor: 1.0
+}
 
 # Save region
 save_region: False
@@ -143,7 +147,6 @@ removal:
   
   sigma_level: 5.0
   outer_factor: 1.6
-  no_source_fwhm: "mean"  # other options: "max", "median"
   remove_saturation: True
   
   # Remove if undetected
@@ -157,8 +160,6 @@ saturation:
   criterion: "flux"  # or "central_brightness"
   brightest_method: "percentage"  # or: "sigma_clip"
   limit: 0.08  # for "percentage": a percentage, for "sigma_clip": a sigma-level
-  
-  no_source_fwhm: "mean"
   
   # For segmentation:
   sigmas: 15.0
@@ -228,7 +229,11 @@ region:
 # Mask
 mask:
 {
-  use_aperture: False
+  # Use aperture instead of segment (source) mask
+  use_aperture: True
+  
+  # Include stars in the mask for which a source was not found
+  include_undetected: True
 }
 
 # Saturation mask
@@ -241,6 +246,12 @@ saturation_mask:
 plotting:
 {
   show_colorbar: True
+}
+
+# Calculation of the default FWHM
+fwhm:
+{
+  measure: "mean"    # other options: "max", "median"
 }
 
 # Apertures
