Improvements in SkyExtractor

--- a/magic/config/skyextractor.cfg
+++ b/magic/config/skyextractor.cfg
@@ -11,9 +11,43 @@ logging:
   path: None
 } 
 
-# Sigma-clip the sky
-sigma_clip: True
-sigma_level: 3.0
+# Sigma clipping
+sigma_clip_mask: True
+sigma_clipping:
+{
+  sigma_level: 3.0
+}
+
+# Flags for saving
+save_masked_frame: False
+save_clipped_masked_frame: False
+save_histogram: False
+
+# Histogram:
+histogram:
+{
+  log_scale: True
+}
+
+# Saving
+saving:
+{
+  masked_frame_path: None
+  clipped_masked_frame_path: None
+  histogram_path: None
+}
+
+# Extra region
+extra_region: None
+
+# Estimation
+estimate: True
+estimation:
+{
+}
+
+# Subtraction
+subtract: True
 
 # Downsample factor
 downsample_factor: 2*4  # (times image.fwhm)
