Allow writing galaxy/star table to file, added option to define an expansion factor for the D25-based masks

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -35,6 +35,9 @@ aperture_removal:
   expansion_factor: 1.0
 }
 
+# Save table
+save_table: False
+
 # Save region
 save_region: False
 
@@ -146,6 +149,9 @@ mask:
   # Use the D25, R25 and orientation parameters if available
   use_d25: True
   
+  # Expansion factor for the D25 contour
+  d25_expansion_factor: 1.2
+  
   # Use aperture instead of segment (source) mask
   use_aperture: True
   
@@ -162,6 +168,9 @@ apertures:
 # Saving
 saving:
 {
+  # Saving galaxy table
+  table_path: None
+  
   # Saving galaxy region
   region_path: None
   region_annotation: "flux"
