--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -38,6 +38,9 @@ aperture_removal:
   expansion_factor: 1.0
 }
 
+# Save table
+save_table: False
+
 # Save region
 save_region: False
 
@@ -263,6 +266,9 @@ apertures:
 # Saving
 saving:
 {
+  # Saving star table
+  table_path: None
+  
   # Saving star region
   region_path: None
   region_annotation: "flux"
