Removed old stuff, added unit conversion stuff

--- a/config/imagepreparation.cfg
+++ b/config/imagepreparation.cfg
@@ -21,6 +21,9 @@ extract_stars: True
 # Sky extraction
 extract_sky: True
 
+# Galactic extinction
+correct_for_extinction: True
+
 # Unit conversion
 convert_unit: True
 unit_conversion:
