Enable rebinning and convolution

--- a/config/imagepreparation.cfg
+++ b/config/imagepreparation.cfg
@@ -35,6 +35,7 @@ unit_conversion:
 convolve: True
 convolution:
 {
+  kernels_dir: "~/Kernels"
   convolve_to: "PACS_160"  # the name as it appears in the Aniano kernel file name
 }
 
