--- a/config/galaxymodeler.cfg
+++ b/config/galaxymodeler.cfg
@@ -24,7 +24,7 @@ extra_dir: "extra"
 ignore_dir: "ignore"
 
 # The reference (for convolving, rebinning)
-reference_image: "PACS160.fits"
+reference_image: "PACS160"
 
 # Run the image preparation
 prepare: True
