Improved MapMaker class

--- a/config/galaxymodeler.cfg
+++ b/config/galaxymodeler.cfg
@@ -11,6 +11,10 @@ logging:
   path: None
 } 
 
+# The name of the primary and error frames
+primary: "primary"
+errors: "errors"
+
 # Define whether to save or plot intermediate results
 save: True
 plot: False
