--- a/config/imagepreparation.cfg
+++ b/config/imagepreparation.cfg
@@ -11,7 +11,7 @@ logging:
   path: None
 } 
 
-# The name of the frame
+# The name of the primary and error frames
 primary: "primary"
 errors: "errors"
 
