--- a/config/mapmaker.cfg
+++ b/config/mapmaker.cfg
@@ -10,3 +10,50 @@ logging:
   # Sets the path for an optional log file
   path: None
 } 
+
+# Cut-off the low signal-to-noise pixels
+cutoff:
+{
+  reference_path: None # Will be set by the GalaxyModeler object
+  level: 3.0  # cut-off when signal < level * uncertainty  # Ilse: 5.0
+  
+  # Perform binary opening on the cut-off mask
+  opening: False
+}
+
+# Saving options
+save_cutoff_maps: True
+saving:
+{
+  # Paths will all be set by the GalaxyModeler object
+  h_cutoff_path: None
+  fuv_cutoff_path: None
+  irac_cutoff_path: None
+  mips_cutoff_path: None
+  pacsblue_cutoff_path: None
+  pacsred_cutoff_path: None
+}
+
+# The sSFR map
+ssfr:
+{
+  mask_low_fuv_snr: True
+  level: 10.0  # cut-off when signal(FUV) < level * uncertainty(FUV)
+  
+  # Output path (will be set by the GalaxyModeler object)
+  output_path: None
+}
+
+# The dust attenuation map
+attenuation:
+{
+  # Output path (will be set by the GalaxyModeler object)
+  output_path: None
+}
+
+# The old stars map
+old_stars:
+{
+  # Output path (will be set by the GalaxyModeler object)
+  output_path: None
+}
