RMapMaker: remove holes from the low signal-to-noise mask

--- a/config/mapmaker.cfg
+++ b/config/mapmaker.cfg
@@ -17,8 +17,8 @@ cutoff:
   reference_path: None # Will be set by the GalaxyModeler object
   level: 3.0  # cut-off when signal < level * uncertainty  # Ilse: 5.0
   
-  # Perform binary opening on the cut-off mask
-  opening: False
+  # Remove holes from the cut-off mask
+  remove_holes: True
 }
 
 # Saving options
