--- a/config/imagepreparation.cfg
+++ b/config/imagepreparation.cfg
@@ -42,6 +42,12 @@ convolution:
 # Rebinning
 rebin: True
 
+# Uncertainties
+uncertainties:
+{
+  add_calibration_error: True
+}
+
 # Cropping
 crop: True
 cropping:
