--- a/config/mapmaker.cfg
+++ b/config/mapmaker.cfg
@@ -34,19 +34,19 @@ saving:
   pacsred_cutoff_path: None
 }
 
-# The sSFR map
-ssfr:
+# The dust map
+dust:
 {
-  mask_low_fuv_snr: True
-  level: 10.0  # cut-off when signal(FUV) < level * uncertainty(FUV)
+  # The calculation of the sSFR map
+  ssfr:
+  {
+    mask_low_fuv_snr: True
+    fuv_snr_level: 0.0  # cut-off when signal(FUV) < fuv_snr_level * uncertainty(FUV)  # Ilse: 10.0
   
-  # Output path (will be set by the GalaxyModeler object)
-  output_path: None
-}
+    # Output path (will be set by the GalaxyModeler object)
+    output_path: None
+  }
 
-# The dust attenuation map
-attenuation:
-{
   # Output path (will be set by the GalaxyModeler object)
   output_path: None
 }
@@ -54,6 +54,35 @@ attenuation:
 # The old stars map
 old_stars:
 {
+  irac_snr_level: 0.0  # cut-off when signal(IRAC) < irac_snr_level * uncertainty(IRAC) # Ilse: 10.0
+ 
   # Output path (will be set by the GalaxyModeler object)
   output_path: None
+}
+
+# The ionizing (young) stars map
+ionizing_stars:
+{
+   # Output path (will be set by the GalaxyModeler object)
+   output_path: None
+   
+   mips_young_stars:
+   {
+     # Output path (will be set by the GalaxyModeler object)
+     output_path: None
+     
+     mips_snr_level: 0.0  # cut-off when signal(MIPS) < mips_snr_level * uncertainty(MIPS)  # Ilse: 10.0
+   }
+   
+   ha_snr_level: 0.0    # cut-off ionizing stars map when signal(Ha) < ha_snr_level * uncertainty(Ha)  # Ilse: 10.0
+   mips_snr_level: 0.0  # cut-off ionizing stars map when signal(24 micron) < mips_snr_level * uncertainty(24 micron)  # Ilse: 10.0
+} 
+
+# The non-ionizing (young) stars map
+non_ionizing_stars:
+{
+  # Output path (will be set by the GalaxyModeler object)
+  output_path: None
+  
+  fuv_snr_level: 0.0 # cut-off when signal(FUV) < fuv_snr_level * uncertainty(FUV) # Ilse: 10.0
 }
