ObjectExtractor: allow for manual regions to be imported for removal

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -21,6 +21,9 @@ special_region: None
 # Ignore region
 ignore_region: None
 
+# Manual galaxy region
+manual_region: None
+
 # Remove galaxies from the frame
 remove: True
 
@@ -163,6 +166,14 @@ mask:
 apertures:
 {
   sigma_level: 4.0 # approximate isophotal extent
+}
+
+# Manually selected galaxies
+manual:
+{
+  background_outer_factor: 1.2
+  remove_method: "interpolation"
+  sigma_clip: True
 }
 
 # Saving
