--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -21,6 +21,9 @@ special_region: None
 # Ignore region
 ignore_region: None
 
+# Manual star region
+manual_region: None
+
 # Remove stars from the frame
 remove: True
 
@@ -261,6 +264,14 @@ fwhm:
 apertures:
 {
   sigma_level: 4.0 # approximate isophotal extent
+}
+
+# Manually selected stars
+manual:
+{
+  background_outer_factor: 1.2
+  remove_method: "interpolation"
+  sigma_clip: True
 }
 
 # Saving
