GalaxyModeler: look for region files with manually selected stars

--- a/config/galaxymodeler.cfg
+++ b/config/galaxymodeler.cfg
@@ -26,6 +26,7 @@ in_dir: "in"
 config_dir: "config"
 extra_dir: "extra"
 ignore_dir: "ignore"
+manual_dir: "manual"
 
 # The reference (for convolving, rebinning)
 reference_image: "PACS160"
