SkyExtractor: Added the value to use for masked pixels as a configurable setting

--- a/magic/config/skyextractor.cfg
+++ b/magic/config/skyextractor.cfg
@@ -35,6 +35,9 @@ saving:
   masked_frame_path: None
   clipped_masked_frame_path: None
   histogram_path: None
+  
+  # Value to use for masked pixels in the resulting FITS files
+  mask_value: "nan"  # or e.g.: 0.0  (value is converted with float(mask_value) anyway)
 }
 
 # Extra region
