StarExtractor: added support for a few other catalogs

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -56,8 +56,8 @@ save_result: False
 # Fetching
 fetching:
 {
-  # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL" or combinations
-  catalogs: "UCAC4" # currently, no other catalogs are supported! 
+  # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL", "II/246" (=2MASS point sources) (or combinations: not supported (yet)! )
+  catalog: "UCAC4"
   
   min_difference_from_galaxy: 10.0   # in pixels
 }
