All-round improvements

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -57,9 +57,10 @@ save_result: False
 fetching:
 {
   # Other possible catalogs: "UCAC4", "NOMAD", "PPMXL", "II/246" (=2MASS point sources) (or combinations: not supported (yet)! )
-  catalog: "UCAC4"
+  catalog: "II/246"
   
-  min_difference_from_galaxy: 10.0   # in pixels
+  # The minimum distance the star has to be seperated from the galaxy center to be positively identified as a star
+  min_distance_from_galaxy: 15.0   # in pixels
 }
 
 # Source detection
@@ -149,14 +150,14 @@ removal:
   method: "interpolation"
   sigma_clip: True
   no_sigma_clip_on_galaxy: True
-  polynomial_on_galaxy: False
+  polynomial_on_galaxy: True
   
   sigma_level: 5.0
   outer_factor: 1.6
   remove_saturation: True
   
   # Remove if undetected
-  remove_if_undetected: True
+  remove_if_undetected: False
 }
 
 # Saturated stars
