Improvement of the code

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -129,7 +129,7 @@ detection:
 removal:
 {
   # Method for ...
-  remove_method: "interpolation"
+  interpolation_method: "local_mean"
   
   sigma_clip: True
   
@@ -172,7 +172,7 @@ apertures:
 manual:
 {
   background_outer_factor: 1.2
-  remove_method: "interpolation"
+  interpolation_method: "local_mean"
   sigma_clip: True
 }
 
