--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -146,8 +146,8 @@ fitting:
 # Removal
 removal:
 {
-  #subtract_model: False   # This feature is still unsupported !
-  method: "interpolation"
+  method: "interpolation"  # options: "interpolation" or "model"
+  interpolation_method: "local_mean"
   sigma_clip: True
   no_sigma_clip_on_galaxy: True
   polynomial_on_galaxy: True
@@ -191,10 +191,10 @@ saturation:
   max_expansion_level: 3
   
   # For removing the saturation
-  remove_method: "interpolation"
+  interpolation_method: "local_mean"
   sigma_clip: True
   no_sigma_clip_on_galaxy: True
-  polynomial_on_galaxy: False
+  polynomial_on_galaxy: True
   
   # Debug mode
   debug:
@@ -271,7 +271,7 @@ apertures:
 manual:
 {
   background_outer_factor: 1.2
-  remove_method: "interpolation"
+  interpolation_method: "local_mean"
   sigma_clip: True
 }
 
