Trying to improve star subtraction by model

--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -184,7 +184,7 @@ saving:
   
   # Saving galaxy region
   region_path: None
-  region_annotation: "flux"
+  region_annotation: "name"
   
   # Saving masked galaxies frame
   masked_frame_path: None
