--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -60,7 +60,12 @@ fetching:
   catalog: "II/246"
   
   # The minimum distance the star has to be seperated from the galaxy center to be positively identified as a star
-  min_distance_from_galaxy: 15.0   # in pixels
+  min_distance_from_galaxy:
+  {
+    principal: 15.0   # in pixels
+    companion: 15.0   # in pixels
+    other: 15.0       # in pixels
+  } 
 }
 
 # Source detection
@@ -158,6 +163,9 @@ removal:
   
   # Remove if undetected
   remove_if_undetected: False
+  
+  # Remove foreground stars
+  remove_foreground: True
 }
 
 # Saturated stars
@@ -225,6 +233,9 @@ saturation:
   
   # Remove appendages from overlapping mask
   remove_appendages: False
+  
+  # Remove foreground stars
+  remove_foreground: True
 }
 
 # Region
