Renamed 'pts' module to 'core', MemoryExtractor and SkirtLauncher are working

--- a/config/fitskirt.cfg
+++ b/config/fitskirt.cfg
@@ -1,11 +1,18 @@
-# Placeholder for the path of the fski file
-fskifile_path: None
+# Placeholder for the fski file pattern
+fski_pattern: None
+
+# Options for the fski file pattern
+recursive: None
+relative: None
 
 # Placeholder for the input path
 input_path: None
 
 # Placeholder for the output path
 output_path: None
+
+# True if only a single simulation is expected
+single: False
 
 # Options for logging
 logging:
