--- a/config/skirt.cfg
+++ b/config/skirt.cfg
@@ -1,11 +1,21 @@
-# Placeholder for the path of the ski file
-skifile_path: None
+# Placeholder for the ski file pattern
+ski_pattern: None
+
+# Options for the ski file pattern
+recursive: None
+relative: None
 
 # Placeholder for the input path
 input_path: None
 
 # Placeholder for the output path
 output_path: None
+
+# Run in emulation mode
+emulate: False
+
+# True if only a single simulation is expected
+single: False
 
 # Options for logging
 logging:
@@ -18,6 +28,12 @@ logging:
   
   # State the amount of used memory with each log message
   memory: False
+  
+  # Write log messages with the amount of (de)allocated memory
+  allocation: False
+  
+  # The lower limit for the amount of (de)allocated memory to be logged
+  allocation_limit: 1e-5
 }
 
 # Options for parallelization
@@ -32,3 +48,4 @@ parallel:
   # The number of parallel processes per simulation
   processes: None
 }
+
