--- a/config/skirtlauncher.cfg
+++ b/config/skirtlauncher.cfg
@@ -11,16 +11,31 @@ logging:
   path: None
 } 
 
-# SKIRT options
-simulation:
+# SKIRT parameters
+parameters:
 {
+}
+
+# Extraction
+extraction:
+{
+  # The path of the directory where the extracted data should be placed
+  path: None
+  
+  progress: False
+  timeline: False
+  memory: False
 }
 
 # Plotting
 plotting:
 {
+  # The path of the directory where the plots should be placed
+  path: None
+  
   seds: False
   grids: False
+  
   progress: False
   timeline: False
   memory: False
@@ -29,6 +44,9 @@ plotting:
 # Advanced
 advanced:
 {
+  # The path of the directory where the images/movies should be placed
+  path: None
+
   rgb: False
   wavemovie: False
 }
