Trying new stuff in StarExtractor

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -41,6 +41,10 @@ aperture_removal:
   expansion_factor: 1.0
 }
 
+# Find and remove other sources
+find_other: False
+remove_other: False
+
 # Save table
 save_table: False
 
