Trying more stuff

--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -54,6 +54,9 @@ save_region: False
 # Save masked frame
 save_masked_frame: False
 
+# Save the segmentation map of other sources
+save_other_segments: False
+
 # Save result
 save_result: False
 
@@ -302,6 +305,9 @@ saving:
   
   # Saving masked stars frame
   masked_frame_path: None
+  
+  # Saving the segmentation map of other sources
+  other_segments_path: None
   
   # Saving the resulting frame (with stars removed)
   result_path: None
