--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -38,21 +38,24 @@ aperture_removal:
   expansion_factor: 1.0
 }
 
-# Save table
-save_table: False
+# Write table
+write_table: False
 
-# Save region
-save_region: False
+# Write region
+write_region: False
 
-# Save masked frame
-save_masked_frame: False
+# Write masked frame
+write_masked_frame: False
 
-# Save result
-save_result: False
+# Write result
+write_result: False
 
 # Detection
 detection:
 {
+  # Use D25
+  use_d25: True
+
   # Convolution
   #convolution: True
 
@@ -176,19 +179,19 @@ manual:
   sigma_clip: True
 }
 
-# Saving
-saving:
+# Writing
+writing:
 {
-  # Saving galaxy table
+  # Writing galaxy table
   table_path: None
   
-  # Saving galaxy region
+  # Writing galaxy region
   region_path: None
   region_annotation: "name"
   
-  # Saving masked galaxies frame
+  # Writing masked galaxies frame
   masked_frame_path: None
   
-  # Saving the resulting frame (with galaxies removed)
+  # Writing the resulting frame (with galaxies removed)
   result_path: None
 }
