--- a/magic/config/skyextractor.cfg
+++ b/magic/config/skyextractor.cfg
@@ -18,10 +18,10 @@ sigma_clipping:
   sigma_level: 3.0
 }
 
-# Flags for saving
-save_masked_frame: False
-save_clipped_masked_frame: False
-save_histogram: False
+# Flags for writing
+write_masked_frame: False
+write_clipped_masked_frame: False
+write_histogram: False
 
 # Histogram:
 histogram:
@@ -29,8 +29,8 @@ histogram:
   log_scale: True
 }
 
-# Saving
-saving:
+# Writing
+writing:
 {
   masked_frame_path: None
   clipped_masked_frame_path: None
