--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -27,6 +27,9 @@ manual_region: None
 # Remove stars from the frame
 remove: True
 
+# Find saturated stars
+find_saturation: True
+
 # Remove saturated stars
 remove_saturation: True
 
@@ -45,20 +48,20 @@ aperture_removal:
 find_other: False
 remove_other: False
 
-# Save table
-save_table: False
+# Write table
+write_table: False
 
-# Save region
-save_region: False
+# Write region
+write_region: False
 
-# Save masked frame
-save_masked_frame: False
+# Write masked frame
+write_masked_frame: False
 
-# Save the segmentation map of other sources
-save_other_segments: False
+# Write the segmentation map of other sources
+write_other_segments: False
 
-# Save result
-save_result: False
+# Write result
+write_result: False
 
 # Fetching
 fetching:
@@ -293,22 +296,22 @@ manual:
   sigma_clip: True
 }
 
-# Saving
-saving:
+# Writing
+writing:
 {
-  # Saving star table
+  # Writing star table
   table_path: None
   
-  # Saving star region
+  # Writing star region
   region_path: None
   region_annotation: "flux"
   
-  # Saving masked stars frame
+  # Writing masked stars frame
   masked_frame_path: None
   
-  # Saving the segmentation map of other sources
+  # Writing the segmentation map of other sources
   other_segments_path: None
   
-  # Saving the resulting frame (with stars removed)
+  # Writing the resulting frame (with stars removed)
   result_path: None
 }
