--- a/magic/config/galaxyextractor.cfg
+++ b/magic/config/galaxyextractor.cfg
@@ -38,6 +38,9 @@ aperture_removal:
   expansion_factor: 1.0
 }
 
+# Remove manual sources
+remove_manual: True
+
 # Write table
 write_table: False
 
@@ -55,6 +58,7 @@ detection:
 {
   # Use D25
   use_d25: True
+  d25_expansion_factor: 1.2
 
   # Convolution
   #convolution: True
@@ -147,22 +151,6 @@ removal:
 region:
 {
   default_radius: 10.0
-}
-
-# Mask
-mask:
-{
-  # Use the D25, R25 and orientation parameters if available
-  use_d25: True
-  
-  # Expansion factor for the D25 contour
-  d25_expansion_factor: 1.2
-  
-  # Use aperture instead of segment (source) mask
-  use_aperture: True
-  
-  # Include stars in the mask for which a source was not found
-  include_undetected: True
 }
 
 # Apertures
