--- a/magic/config/starextractor.cfg
+++ b/magic/config/starextractor.cfg
@@ -48,6 +48,9 @@ aperture_removal:
 find_other: False
 remove_other: False
 
+# Remove manual sources
+remove_manual: True
+
 # Write table
 write_table: False
 
@@ -252,22 +255,6 @@ saturation:
 region:
 {
   sigma_level: 5.0
-}
-
-# Mask
-mask:
-{
-  # Use aperture instead of segment (source) mask
-  use_aperture: True
-  
-  # Include stars in the mask for which a source was not found
-  include_undetected: True
-}
-
-# Saturation mask
-saturation_mask:
-{
-  use_aperture: False
 }
 
 # Plotting
